--- a/maps.html
+++ b/maps.html
@@ -27,11 +27,11 @@
     </div><br>
 
     <div id="story" class="gallerywrapper">
-        THE JOURNEY<br>
-        <br>
+      <span itemprop="articleSection">THE JOURNEY</span><br/>
 
     </div>
-
+</span>
     <div id="map"></div>
 </body>
 </html>
+
