--- a/maps.html
+++ b/maps.html
@@ -3,15 +3,15 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title headline>Around the World in 80 .Markers</title>
-    <link href="stylesheets/style.css" rel ="stylesheet"type=
-    "text/css">
+    <title headline>Around the World in 80 .Markers  | Dafins Journey</title>
+    <link href="stylesheets/style.css" rel = "stylesheet" type="text/css">
     <script src=
     "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js">
     </script>
-    <script src="javascripts/js.js" type="text/javascript">
- <script src="javascripts/ftscroller.js" type="text/javascript">
-    </script><!-- Can have &callback=myFunction -->
+    <script src="javascripts/js.js" type= "text/javascript"/></script>
+ <!--    <script src="javascripts/ftscroller.js" type="text/javascript"/></script> -->
+
+    <!-- Can have &callback=myFunction -->
 
     <script async defer src=
     "https://maps.googleapis.com/maps/api/js?key=AIzaSyA_Uhb5NJWAoTTvPIO2_HqYWBl0vAbXoJc">
@@ -28,10 +28,11 @@
 
     <div id="story" class="gallerywrapper">
       <span itemprop="articleSection">THE JOURNEY</span><br/>
-
-    </div>
 </span>
+    </div>
+
     <div id="map"></div>
+    <div id="info"> info</div>
 </body>
 </html>
 
