--- a/maps.html
+++ b/maps.html
@@ -3,12 +3,19 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title headline>Around the World in 80 .Markers  | Dafins Journey</title>
-    <link href="stylesheets/style.css" rel = "stylesheet" type="text/css">
+    <title>Around the World in 80 .Markers  | Dafins Journey</title>
+  
+   <!--  switch to cdn on production
     <script src=
     "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js">
-    </script>
-    <script src="javascripts/js.js" type= "text/javascript"/></script>
+    -->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js"></script>
+
+
+<script src="javascripts/jquery.min.js"></script>
+
+    <script src="javascripts/js.js" type= "text/javascript"></script>
  <!--    <script src="javascripts/ftscroller.js" type="text/javascript"/></script> -->
 
     <!-- Can have &callback=myFunction -->
@@ -16,6 +23,12 @@
     <script async defer src=
     "https://maps.googleapis.com/maps/api/js?key=AIzaSyA_Uhb5NJWAoTTvPIO2_HqYWBl0vAbXoJc">
     </script>
+<style>
+  
+
+</style>
+  <link href="stylesheets/style.css" rel = "stylesheet" type="text/css">
+
 </head>
 <body itemscope itemtype="http://schema.org/WebPage">
  
@@ -28,11 +41,15 @@
 
     <div id="story" class="gallerywrapper">
       <span itemprop="articleSection">THE JOURNEY</span><br/>
-</span>
-    </div>
+        <nav><ul>
+  
+            </ul></nav></div>
 
     <div id="map"></div>
-    <div id="info"> info</div>
+    <div id="info-container" class="pt-perspective"> 
+        <div id="info" class="pt-page-moveToLeftFade pt-page"> info</div>
+        <div id="next-info" class="pt-page-moveFromRightFade pt-page-ontop pt-page"> next info</div>
+    </div>
 </body>
 </html>
 
