JS Class attribute Adding

--- a/maps.html
+++ b/maps.html
@@ -47,8 +47,8 @@
 
     <div id="map"></div>
     <div id="info-container" class="pt-perspective"> 
-        <div id="info" class="pt-page-moveToLeftFade pt-page"> info</div>
-        <div id="next-info" class="pt-page-moveFromRightFade pt-page-ontop pt-page"> next info</div>
+        <div id="info" class=" pt-page"> info</div>
+        <div id="next-info" class="pt-page-ontop pt-page"> next info</div>
     </div>
 </body>
 </html>
