--- a/maps.html
+++ b/maps.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Around the World in 80 .Markers  | Dafins Journey</title>
@@ -11,11 +13,8 @@
     -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js"></script>
-
-
 <script src="javascripts/jquery.min.js"></script>
-
-    <script src="javascripts/js.js" type= "text/javascript"></script>
+<script src="javascripts/js.js" type= "text/javascript"></script>
  <!--    <script src="javascripts/ftscroller.js" type="text/javascript"/></script> -->
 
     <!-- Can have &callback=myFunction -->
@@ -40,12 +39,15 @@
     </div><br>
 
     <div id="story" class="gallerywrapper">
-      <span itemprop="articleSection">THE JOURNEY</span><br/>
+    
+
+    <div id="map"></div>
+
+<!--   <span itemprop="articleSection">THE JOURNEY</span><br/> -->
         <nav><ul>
   
             </ul></nav></div>
 
-    <div id="map"></div>
     <div id="info-container" class="pt-perspective"> 
         <div id="info" class=" pt-page"> info</div>
         <div id="next-info" class="pt-page-ontop pt-page"> next info</div>
